* fixed saving of files with special characters (caused script to be trimmed) * fixed styling in edit dialog (enabled wrapping and moved clickable parts   to the front so that they are accessible even with small window width)

--- a/public_html/client_style.css
+++ b/public_html/client_style.css
@@ -332,13 +332,14 @@ button img {
 #settings ul.indent2 { padding-left: 2em; }
 #settings ul.indent3 { padding-left: 3em; }
 
-#settings input[type="text"] {
-  width: 95%;
-}
-
 #settings li {
   display: inline-block;
   margin: 0 1px;
+  white-space: normal;
+}
+
+#settings input[type="text"] {
+  width: 95%;
 }
 
 #settings .setting_elem {
